fix z-index

--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -11,6 +11,7 @@ header {
     width: 100%;
     position: fixed;
     padding: 24px;
+    z-index: 100;
     // @include z-index('header');
 
     .nav-search {
